--- a/index.html
+++ b/index.html
@@ -83,9 +83,13 @@
                         <label for="days">Días disponibles para entrenar</label>
                         <select id="days" name="days" required>
                             <option value="">Selecciona...</option>
+                            <option value="1">1 día</option>
+                            <option value="2">2 días</option>
                             <option value="3">3 días</option>
                             <option value="4">4 días</option>
                             <option value="5">5 días</option>
+                            <option value="6">6 días</option>
+                            <option value="7">7 días</option>
                         </select>
                     </div>
 
